add debug code generation